<?xml version="1.0"?>
<package format="2">
  <name>gsm_900</name>
  <version>0.0.0</version>
  <description>The gsm_900 package</description>

  <maintainer email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</maintainer>
  <license>MIT</license>
  <author email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>

</package>
